# Multi-Agent-Orchestration-System-For-Unified-Retail-Intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WHISPER_SETUP_GUIDE.md  debug_vapi.py  docker-compose.yml  pyproject.toml  requirements.txt
omniflow/: db.sqlite3  db_caredesk.sqlite3  db_payguard.sqlite3  db_shipstream.sqlite3  db_shopcore.sqlite3
omniflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
omniflow/agents/: __init__.py  input_data.py
omniflow/agents/caredesk/: __init__.py  agent.py
omniflow/agents/langchain_based_agents/: __init__.py  base.py  caredesk_agent.py  payguard_agent.py  shipstream_agent.py  shopcore_agent.py  vision_agent.py
omniflow/agents/payguard/: __init__.py  agent.py
omniflow/agents/shopcore/: agent.py  (+1 more)
omniflow/api_gateway/: consumers.py  routing.py  tts_views.py  urls.py  views.py  whisper_views.py
omniflow/backend/: asgi.py  db_router.py  settings.py  urls.py
omniflow/caredesk/: apps.py  models.py  services.py
omniflow/omniflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
omniflow/payguard/: apps.py  models.py  services.py
omniflow/shipstream/: apps.py  models.py  services.py
omniflow/shopcore/: apps.py  models.py  services.py
omniflow/sql_files/: README.md  caredesk.sql  dummy_shipment_data.json  generate_shipment_sql.py  payguard.sql  setup_database.bat  shipstream.sql  shipstream_data_from_json.sql  shipstream_data_import.sql  shopcore.sql  supervisor_test_data.sql
omniflow/templates/: omni_ui.html  omni_ui_whisper.html
omniflow/utils/: config.py  logging.py  prompts.py
(+25 files in other folders)
